start Libvirt machinery-based screenshots

--- a/core/cuckoo/data/conftemplates/cuckoo.yaml.jinja2
+++ b/core/cuckoo/data/conftemplates/cuckoo.yaml.jinja2
@@ -12,6 +12,10 @@ machineries:
   - {{ machinery }}
 {% endfor %}
 
+# Enable screenshots of analysis machines while running.
+machinery_screenshots:
+  enabled: {{ machinery_screenshots.enabled }}
+
 # The resultserver is a Cuckoo component that running analysis machines upload their results to
 # it should be reachable from the analysis machine. A resultserver will be started on the configured
 # listen IP and port. Make sure the IP is off a network interface that is part of the analysis machine network or
